@@ -443,6 +443,7 @@ All:
 
 All (GUI):
 
+- Added documented, public wxNavigationEnabled<> class.
 - Support float, double and file name values in wxGenericValidator (troelsk).
 - Fix keyboard navigation in wxGrid with hidden columns (ivan_14_32).
 - Add wxDataViewEvent::IsEditCancelled() (Allonii).
